Update homepage content

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
           -ms-user-select: none;
               user-select: none;
       -webkit-touch-callout: none;
+
+      <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="description" content="Artist portfolio and contact site for April Cortes. Reach April at aprilcortes@gmail.com.">
+      <meta name="keywords" content="April Cortes, aprilcortes@gmail.com, artist, contact, portfolio, photography, Los Angeles">
+      <meta name="author" content="April Cortes">
+      <title>April Cortes</title>
+      </head>
+
     }
 
     h1 {
@@ -81,6 +91,9 @@
   </h1>
 
   <div class="gallery">
+    <img src="images/045_21A.jpg" alt="foto_00" />
+    <img src="images/045_21A.jpg" alt="foto_00" />
+    <img src="images/045_21A.jpg" alt="foto_00" />
     <img src="images/045_21A.jpg" alt="foto_00" />
   </div>
 
