--- a/index.html
+++ b/index.html
@@ -3,60 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>april maria st. zita</title>
+  <title>April Cortes</title>
+  <meta name="description" content="Artist portfolio and contact site for April Cortes. Reach April at aprilcortes@gmail.com.">
+  <meta name="keywords" content="April Cortes, aprilcortes@gmail.com, artist, contact, portfolio, photography, Los Angeles">
+  <meta name="author" content="April Cortes">
+
   <style>
     html, body {
       margin: 0;
-      padding: 10;
+      padding: 0;
       height: 100%;
-      scroll-behavior: smooth;
       font-family: Helvetica, sans-serif;
-      background-size: cover;
+      scroll-behavior: smooth;
+      background-color: rgba(237, 113, 212, 0.08);
       overflow-x: hidden;
-      -webkit-user-select: none;
-         -moz-user-select: none;
-          -ms-user-select: none;
-              user-select: none;
+      user-select: none;
       -webkit-touch-callout: none;
-
-      <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="description" content="Artist portfolio and contact site for April Cortes. Reach April at aprilcortes@gmail.com.">
-      <meta name="keywords" content="April Cortes, aprilcortes@gmail.com, artist, contact, portfolio, photography, Los Angeles">
-      <meta name="author" content="April Cortes">
-      <title>April Cortes</title>
-      </head>
-
     }
 
     h1 {
       font-size: 14px;
       color: #e43e2f;
       text-align: left;
-      padding: 0px;
       margin: 0;
+      padding: 10px;
       background-color: rgba(237, 113, 212, 0.296);
-      backdrop-filter: blur(6px); /* NEW: Adds a blur for glass effect */
-      -webkit-backdrop-filter: blur(6px); /* iOS Safari support */
+      backdrop-filter: blur(6px);
+      -webkit-backdrop-filter: blur(6px);
       position: sticky;
       top: 0;
       z-index: 10;
-    }
-
       opacity: 0;
       animation: fadeInHeader 1.5s ease-out forwards;
-    } 
-
-      @keyframes fadeInHeader {
-  to {
-    opacity: 1;
-  }
     }
 
-    a.email-link {
+    a.email-link, a.diario-link {
       color: #e43e2f;
       text-decoration: none;
+      display: block;
+      margin-top: 4px;
     }
 
     .gallery {
@@ -75,26 +60,26 @@
       animation: fadeIn 1s ease-in forwards;
     }
 
-    .gallery img:nth-child(2) {
-      animation-delay: 0.5s;
-    }
+    .gallery img:nth-child(2) { animation-delay: 0.5s; }
+    .gallery img:nth-child(3) { animation-delay: 1s; }
+    .gallery img:nth-child(4) { animation-delay: 1.5s; }
+    .gallery img:nth-child(5) { animation-delay: 2s; }
 
     @keyframes fadeIn {
-      to {
-        opacity: 5;
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInHeader {
+      to { opacity: 1; }
+    }
+
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 16px;
+        padding: 8px;
+        background-color: rgba(237, 113, 212, 0.445);
       }
     }
-
-      @media (max-width: 768px) {
-    h1 {
-      font-size: 16px;
-      padding: 8px;
-      background-color: rgba(237, 113, 212, 0.445);
-      backdrop-filter: blur(6px);
-      -webkit-backdrop-filter: blur(6px);
-    }
-  }
-
   </style>
 
   <script>
@@ -106,19 +91,16 @@
     });
   </script>
 </head>
-<body>
 
+<body>
   <h1>
     contacto <br>
     <a class="email-link" href="mailto:aprilcortes@gmail.com">aprilcortes@gmail.com</a>
   </h1>
 
   <div class="gallery">
-    <img src="images/045_21A.jpg" alt="foto_00" />
-    <img src="images/045_21A.jpg" alt="foto_00" />
-    <img src="images/045_21A.jpg" alt="foto_00" />
-    <img src="images/045_21A.jpg" alt="foto_00" />
+    <img src="images/045_21A.jpg" alt="foto_03" />
+    <img src="images/043_23A.JPG" alt="foto_02" />
   </div>
-
 </body>
 </html>
