Update homepage content

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </h1>
 
   <div class="gallery">
-    <img src="images/045_21A.jpg" alt="foto_03" />
+    <img src="images/000081690010.jpg" alt="foto_03" />
   </div>
 </body>
 </html>
