Update homepage content

--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
   <meta name="author" content="April Cortes">
 
   <style>
-    html, body {
+    html {
       margin: 0;
       padding: 0;
       height: 100%;
+      background-color: rgba(237, 113, 212, 0.08);
+    }
+
+    body {
+      margin: 0;
+      padding-top: 0px; /* enough space for fixed header */
+      min-height: 100%;
       font-family: Helvetica, sans-serif;
       scroll-behavior: smooth;
-      background-color: rgba(237, 113, 212, 0.08);
+      background-color: rgba(232, 126, 210, 0.415);
       overflow-x: hidden;
       user-select: none;
       -webkit-touch-callout: none;
@@ -26,12 +33,14 @@
       color: #e43e2f;
       text-align: left;
       margin: 0;
-      padding: 10px;
-      background-color: rgba(237, 113, 212, 0.296);
+      padding: 50px;
+      background-color: rgba(240, 171, 226, 0.296);
       backdrop-filter: blur(6px);
       -webkit-backdrop-filter: blur(6px);
-      position: sticky;
+      position: fixed;
       top: 0;
+      left: 0;
+      right: 0;
       z-index: 10;
       opacity: 0;
       animation: fadeInHeader 1.5s ease-out forwards;
@@ -79,11 +88,14 @@
         padding: 8px;
         background-color: rgba(237, 113, 212, 0.445);
       }
+
+      body {
+        padding-top: 60px;
+      }
     }
   </style>
 
   <script>
-    // Disable right-click on images
     document.addEventListener("contextmenu", function (e) {
       if (e.target.tagName === "IMG") {
         e.preventDefault();
