Update homepage content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       right: 0;
       z-index: 10;
       opacity: 0;
-      animation: fadeInHeader 1.5s ease-out forwards;
+      animation: fadeInHeader .5s ease-out forwards;
     }
 
     a.email-link, a.diario-link {
