--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
       }
     });
   </script>
+
+  
+    <link rel="icon" href="/images/favicon.png" type="image/png">
+
 </head>
 
 <body>
@@ -112,6 +116,8 @@
 
   <div class="gallery">
     <img src="images/000081690010.jpg" alt="foto_03" />
+    <img src="images/000081690010.jpg" alt="foto_03" />
+
   </div>
 </body>
 </html>
