Update homepage content

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>April Cortes</title>
   <meta name="description" content="Artist portfolio and contact site for April Cortes. Reach April at aprilcortes@gmail.com.">
-  <meta name="keywords" content="April Cortes, aprilcortes@gmail.com, artist, contact, portfolio, photography, Los Angeles">
-  <meta name="author" content="April Cortes">
+  <meta name="keywords" content="April Cortés, aprilcortes@gmail.com, artist, contact, portfolio, photography, Los Angeles">
+  <meta name="author" content="April Cortés">
 
   <style>
     html {
